<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/battery_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/battery_full"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/wifi_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toStartOf="@id/battery_icon"
                android:paddingStart="3dp"
                android:paddingEnd="7dp"
                android:src="@drawable/round_wifi_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/signal_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toStartOf="@id/wifi_icon"
                android:src="@drawable/round_signal_cellular_alt_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="7dp"
                android:text="@string/_9_41"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/go_back_to_dm_page"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:text="@string/henry_benjamin"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/goBackButton"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/call_person"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:srcCompat="@drawable/phone" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:contentDescription="@string/video_call_person"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:srcCompat="@drawable/video" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_pic_holder"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:cardCornerRadius="35dp">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/profile_pic"
                    android:scaleType="centerCrop"
                    android:src="@drawable/person_pic_1" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/login_button"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_rectangle_btn"
            android:backgroundTint="#c1c1c1"
            android:padding="2dp"
            android:text="@string/view_profile"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:theme="@style/Button.White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic_holder" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="4dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#c1c1c1"
            android:padding="10dp"
            android:text="@string/hello_how_are_you"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.233" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"

            android:text="@string/_10_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.015" />


        <!-- Make the rest of the messages accordingly -->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginBottom="264dp"
            android:src="@drawable/person_pic_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="264dp"

            android:background="@drawable/rounded_corner"
            android:backgroundTint="#c1c1c1"
            android:padding="10dp"
            android:text="@string/hi_i_am_great_wbu"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/_10_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.013" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#c1c1c1"
            android:padding="10dp"
            android:text="@string/i_am_doing_well"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_01_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.015"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginBottom="56dp"
            android:src="@drawable/person_pic_1"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#c1c1c1"
            android:padding="10dp"
            android:text="@string/good_to_know"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/circleImageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/_01_30"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.015" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#977656"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:autofillHints="Text Data"
                android:background="@null"
                android:hint="@string/typing"
                android:inputType="text"
                android:padding="15dp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@null"
                android:contentDescription="@string/send_message"
                android:src="@drawable/message_text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>