<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dms"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/requests"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/battery_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/battery_full"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/wifi_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toStartOf="@id/battery_icon"
                android:paddingStart="3dp"
                android:paddingEnd="7dp"
                android:src="@drawable/round_wifi_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/signal_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toStartOf="@id/wifi_icon"
                android:src="@drawable/round_signal_cellular_alt_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"

                android:text="@string/_9_41"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/goBackButton"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/go_back_to_home_page"
            android:background="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:text="@string/oliviad"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/goBackButton"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        <ImageButton
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/inbox"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:srcCompat="@drawable/edit" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/dms"
            android:textColor="@color/brown"

            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginStart="38dp"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="#644117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:queryHint="Search for DMs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dmRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>